--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ a:hover {
 	top:0;
 	width:100%;
 	background-color: #fff;
-	padding-bottom:1em;
+	padding-bottom:.5em;
 	margin-left:3em;
 
 }
@@ -217,9 +217,9 @@ img {
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 3s;
+  -webkit-animation-duration: 5s;
   animation-name: fade;
-  animation-duration: 3s;
+  animation-duration: 5s;
 }
 
 @-webkit-keyframes fade {
@@ -243,19 +243,19 @@ img {
 }
 
 .wedding-form {
-  height: 60em;
+  height: 123em;
   width: 40em;
   background-color: #fff;
   margin:0 auto;
   margin-top:9em;
   border-radius: 1em;
   border:.2em dotted grey;
-  color: #666;
+  color: #444;
   padding-bottom:2em;
 }
 
 .info {
-  padding: 2em;
+  padding: 1.7em;
 }
 
 h1, h2, p {
@@ -267,7 +267,7 @@ h1, h2, p {
 
 h1{
 	font-family:"Grand Hotel", cursive;
-	font-size:3em;
+	font-size:3.5em;
    line-height:1.5em;
    color:#0000b3;
    margin-bottom:0em;
@@ -276,16 +276,16 @@ h1{
 h2 {
   font-family: 'Oswald', sans-serif;
   font-weight: 200;
-  font-size:1.5em;
-  line-height:1.2em;
+  font-size:2em;
+  line-height:1.5em;
 }
 
 h3 {
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
   text-transform:uppercase;
-  font-size:1em;
-  padding-bottom:.2em;
+  font-size:2em;
+  padding-bottom:.4em;
 }
 
 p {
@@ -439,7 +439,7 @@ button:focus {
 	text-align:center;
 	font-family:"Oswald", sans-serif;
 	font-weight:300;
-	font-size:2.3em;
+	font-size:2.7em;
 	text-transform:uppercase;
 	margin: 3em auto 1em 2em;
 }
@@ -496,7 +496,7 @@ button:focus {
 .bridesmaid-bio-top h3 {
 	font-family:"Oswald", sans-serif;
 	font-weight:200;
-	font-size:1em;
+	font-size:1.2em;
 	margin-bottom:.5em;
 }
 
@@ -517,7 +517,7 @@ button:focus {
 
 
 .bridesmaid-bio {
-	margin:1em auto 8.3em 1em;
+	margin:1em auto 7.3em 1em;
 	clear:both;
 }
 
@@ -525,7 +525,7 @@ button:focus {
 .bridesmaid-bio h3 {
 	font-family:"Oswald", sans-serif;
 	font-weight:200;
-	font-size:1em;
+	font-size:1.2em;
 	margin-bottom:.5em;
 }
 
@@ -538,14 +538,14 @@ button:focus {
 }
 
 .bridesmaid-bio-mid {
-	margin:-1em auto 8em 1em;
+	margin:-1em auto 8.5em 1em;
 }
 
 
 .bridesmaid-bio-mid h3 {
 	font-family:"Oswald", sans-serif;
 	font-weight:200;
-	font-size:1em;
+	font-size:1.2em;
 	margin-bottom:.5em;
 }
 
@@ -911,13 +911,12 @@ footer {
 		margin-bottom:1em;
 	}
 
-	.info-mobile-only {
-		margin-top:1em;
-		margin-bottom:2.5em;
-	}
-
 	.line {
 		display:none;
+	}
+
+	.venue-images {
+		margin-bottom:-3em;
 	}
 
 
@@ -1099,10 +1098,6 @@ footer {
 		margin-bottom:1em;
 	}
 
-	.info-mobile-only {
-		margin-top:1em;
-		margin-bottom:2.5em;
-	}
 
 	.line {
 		display:none;
